--- a/roles/ceph-defaults/tasks/facts.yml
+++ b/roles/ceph-defaults/tasks/facts.yml
@@ -1,13 +1,12 @@
 ---
 
-- name: get hostname
-  command: hostname
-  register: ansible_hostname
-
 - set_fact:
     monitor_name: "{{ ansible_hostname }}"
 
-- name: generate cluster fsid
+- name: generate cluster uuid
   local_action: shell uuidgen
   register: cluster_uuid
   become: false
+
+- set_fact:
+    fsid: "{{ cluster_uuid.stdout }}"
