--- a/roles/ceph-defaults/tasks/facts.yml
+++ b/roles/ceph-defaults/tasks/facts.yml
@@ -3,10 +3,31 @@
 - set_fact:
     monitor_name: "{{ ansible_hostname }}"
 
-- name: generate cluster uuid
-  local_action: shell uuidgen
+- name: create a local fetch directory if it does not exist
+  local_action: file path={{ fetch_directory }} state=directory
+  changed_when: false
+  become: false
+  run_once: true
+  when: generate_fsid
+
+- name: generate cluster fsid
+  local_action: shell python -c 'import uuid; print(str(uuid.uuid4()))' | tee {{ fetch_directory }}/ceph_cluster_uuid.conf
+    creates="{{ fetch_directory }}/ceph_cluster_uuid.conf"
   register: cluster_uuid
   become: false
+  when:
+    - generate_fsid
 
-- set_fact:
+- name: read cluster fsid if it already exists
+  local_action: command cat {{ fetch_directory }}/ceph_cluster_uuid.conf
+    removes="{{ fetch_directory }}/ceph_cluster_uuid.conf"
+  changed_when: false
+  register: cluster_uuid
+  become: false
+  check_mode: no
+  when: generate_fsid
+
+- name: set fsid fact when generate_fsid = true
+  set_fact:
     fsid: "{{ cluster_uuid.stdout }}"
+  when: generate_fsid
