--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -13,7 +13,7 @@ dummy:
 # GENERAL #
 ###########
 
-#fetch_directory: fetch/
+fetch_directory: fetch/
 
 # The 'cluster' variable determines the name of the cluster.
 # Changing the default value to something else means that you will
@@ -206,7 +206,7 @@ mon_group_name: mons
 # false, you *must* generate `fsid` in another way.
 # ACTIVATE THE FSID VARIABLE FOR NON-VAGRANT DEPLOYMENT
 #fsid: "{{ cluster_uuid.stdout }}"
-#generate_fsid: true
+generate_fsid: true
 
 #ceph_conf_key_directory: /etc/ceph
 
