--- a/roles/ceph-mon/tasks/deploy_monitors.yml
+++ b/roles/ceph-mon/tasks/deploy_monitors.yml
@@ -10,3 +10,22 @@
 - name: Add the client.admin key to the ceph.mon.keyring.
   command: ceph-authtool /tmp/ceph.mon.keyring --import-keyring /etc/ceph/ceph.client.admin.keyring
   become: false
+
+- name: Generate a monitor map using the hostname(s), host IP address(es) and the FSID. Save it as /tmp/monmap
+  command: monmaptool --create --add {{ monitor_name }} {{ monitor_address }} --fsid {{ fsid }} /tmp/monmap
+  become: false
+
+- name: create (and fix ownership of) monitor directory
+  file:
+    path: /var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
+    state: directory
+    mode: "0755"
+    recurse: true    
+
+- name: Populate the monitor daemon(s) with the monitor map and keyring.
+  command: ceph-mon --cluster {{ cluster }} --mkfs -i {{ monitor_name }} --monmap /tmp/monmap --keyring /tmp/ceph.mon.keyring
+
+- name: Mark that the monitor is created and ready to be started
+  file:
+    path: /var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}/done
+    state: file
