modify deploy_monitors for multi-init

--- a/roles/ceph-mon/tasks/deploy_monitors.yml
+++ b/roles/ceph-mon/tasks/deploy_monitors.yml
@@ -1,33 +1,59 @@
 ---
-- name: Create a keyring for your cluster and generate a monitor secret key.
-  command: ceph-authtool --create-keyring /tmp/ceph.mon.keyring --gen-key -n mon. --cap mon 'allow *'
+- name: generate monitor initial keyring
+  local_action: shell python2 -c "import os ; import struct ; import time; import base64 ; key = os.urandom(16) ; header = struct.pack('<hiih',1,int(time.time()),0,len(key)) ; print base64.b64encode(header + key)" | tee {{ fetch_directory }}/monitor_keyring.conf
+    creates={{ fetch_directory }}/monitor_keyring.conf
+  register: monitor_keyring
   become: false
 
-- name: Generate an administrator keyring, generate a client.admin user and add the user to the keyring.
-  command: ceph-authtool --create-keyring /etc/ceph/ceph.client.admin.keyring --gen-key -n client.admin --set-uid=0 --cap mon 'allow *' --cap osd 'allow *' --cap mds 'allow *' --cap mgr 'allow *'
-  become: true
-
-- name: Add the client.admin key to the ceph.mon.keyring.
-  command: ceph-authtool /tmp/ceph.mon.keyring --import-keyring /etc/ceph/ceph.client.admin.keyring
+- name: read monitor initial keyring if it already exists
+  local_action: command cat {{ fetch_directory }}/monitor_keyring.conf
+    removes={{ fetch_directory }}/monitor_keyring.conf
+  changed_when: false
+  register: monitor_keyring
   become: false
+  check_mode: no
 
-- name: Generate a monitor map using the hostname(s), host IP address(es) and the FSID. Save it as /tmp/monmap
-  command: monmaptool --create --add {{ monitor_name }} {{ monitor_address }} --fsid {{ fsid }} /tmp/monmap
+- name: create monitor initial keyring
+  command: ceph-authtool /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }} --create-keyring --name=mon. --add-key={{ monitor_keyring.stdout }} --cap mon 'allow *'
   args:
-    creates: /tmp/monmap
-  become: false
+    creates: /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }}
+
+- name: set initial monitor key permissions
+  file:
+    path: /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }}
+    owner: "ceph"
+    group: "ceph"
+    mode: "0600"
 
 - name: create (and fix ownership of) monitor directory
   file:
     path: /var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
     state: directory
+    owner: "ceph"
+    group: "ceph"
     mode: "0755"
-    recurse: true    
+    recurse: true
 
-- name: Populate the monitor daemon(s) with the monitor map and keyring.
-  command: ceph-mon --cluster {{ cluster }} --mkfs -i {{ monitor_name }} --monmap /tmp/monmap --keyring /tmp/ceph.mon.keyring
+- name: create custom admin keyring
+  command: "ceph-authtool /etc/ceph/{{ cluster }}.client.admin.keyring --create-keyring --name=client.admin --gen-key --set-uid=0 --cap mon 'allow *' --cap osd 'allow *' --cap mds 'allow'"
+  args:
+    creates: /etc/ceph/{{ cluster }}.client.admin.keyring
+  register: create_custom_admin_secret
 
-- name: Mark that the monitor is created and ready to be started
+- name: set ownership of admin keyring
   file:
-    path: /var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}/done
-    state: touch
+    path: /etc/ceph/{{ cluster }}.client.admin.keyring
+    state: file
+    owner: 'ceph'
+    group: 'ceph'
+    mode: '0600'
+
+- name: import admin keyring into mon keyring
+  command: ceph-authtool /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }} --import-keyring /etc/ceph/{{ cluster }}.client.admin.keyring
+  when:
+    - not create_custom_admin_secret.get('skipped')
+
+- name: ceph monitor mkfs with keyring
+  command: ceph-mon --cluster {{ cluster }} --setuser ceph --setgroup ceph --mkfs -i {{ monitor_name }} --fsid {{ fsid }} --keyring /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }}
+  args:
+    creates: /var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}/keyring
