--- a/roles/ceph-mon/tasks/deploy_monitors.yml
+++ b/roles/ceph-mon/tasks/deploy_monitors.yml
@@ -34,11 +34,18 @@
     mode: "0755"
     recurse: true
 
+- set_fact:
+    ceph_authtool_cap: "--cap mon 'allow *' --cap osd 'allow *' --cap mds 'allow'"
+  when:
+    - admin_secret != 'admin_secret'
+
 - name: create custom admin keyring
-  command: "ceph-authtool /etc/ceph/{{ cluster }}.client.admin.keyring --create-keyring --name=client.admin --gen-key --set-uid=0 --cap mon 'allow *' --cap osd 'allow *' --cap mds 'allow'"
+  command: "ceph-authtool /etc/ceph/{{ cluster }}.client.admin.keyring --create-keyring --name=client.admin --add-key={{ admin_secret }} --set-uid=0 {{ ceph_authtool_cap }}"
   args:
     creates: /etc/ceph/{{ cluster }}.client.admin.keyring
   register: create_custom_admin_secret
+  when:
+    - admin_secret != 'admin_secret'
 
 - name: set ownership of admin keyring
   file:
@@ -47,10 +54,14 @@
     owner: 'ceph'
     group: 'ceph'
     mode: '0600'
+  when:
+    - admin_secret != 'admin_secret'
+
 
 - name: import admin keyring into mon keyring
   command: ceph-authtool /var/lib/ceph/tmp/keyring.mon.{{ monitor_name }} --import-keyring /etc/ceph/{{ cluster }}.client.admin.keyring
   when:
+    - admin_secret != 'admin_secret'
     - not create_custom_admin_secret.get('skipped')
 
 - name: ceph monitor mkfs with keyring
